--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "lint": "eslint ./"
+    "lint": "eslint ./",
+    "migrate": "node-pg-migrate"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "dotenv": "^10.0.0",
     "joi": "^17.4.0",
     "nanoid": "^3.1.23",
+    "node-pg-migrate": "^5.9.0",
     "pg": "^8.6.0"
   }
 }
